<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/turnTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe_game"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout style="@style/row">

            <Button
                android:id="@+id/a1"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action" />

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/a2"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_1" />

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/a3"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_2" />

        </LinearLayout>

        <View style="@style/horizontalLine" />

        <LinearLayout style="@style/row">

            <Button
                android:id="@+id/b1"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_3" />

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/b2"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_4" />

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/b3"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_5" />

        </LinearLayout>

        <View style="@style/horizontalLine" />

        <LinearLayout style="@style/row">

            <Button
                android:id="@+id/c1"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_6" />

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/c2"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_7" />

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/c3"
                style="@style/column"
                android:contentDescription="@string/button_to_perform_a_specific_action_8" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>